--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,15 @@
 server:
-  port: 8082
+  port: 8087
 
 
 spring:
+  servlet:
+    multipart:
+      enabled: true   #启动上传配置
+      max-file-size: 10MB #设置单个上传文件大小的限制
+      max-request-size: 20MB #设置总体上传大小的限制
+      file-size-threshold: 521KB #每当达到512KB的时候内容写入磁盘
+      location: / #设置上传目录
   messages:
    basename: i18n/Messages,i18n/Pages
   mvc:
@@ -16,22 +23,14 @@ spring:
 #    virtual-host: /
 
   # redis 缓存服务器配置
-#  redis:
-#    # 服务地址
-#    host: 114.55.102.45
-#    # 务端口
-#    ports: 6379
-#    # 登录密码
-#    password:
-#    jedis:
-#      pool:
-#        # 连接池最大空闲连接数
-#        max-idle: 100
-#        # 一个连接池可分配多少个jedis实例(使用负值表示没有限制)
-#        max-active: 100
-#        #这里在IDEA中显示红色错误，不用管，因为org.springframework.boot.autoconfigure.data.redis.RedisProperties.Pool.setMaxWait(Duration maxWait)
-#        #当连接池耗尽时， 抛出异常之前，连接分配被阻塞的时间，也就是连接池满后最长等待时间，负值表示无限期等待
-#        max-wait: 1000
+  redis:
+    # 服务地址
+    host: 127.0.0.1
+    # 务端口
+    ports: 6379
+    # 登录密码
+    password:
+
   # 数据库连接配置
   datasource:
     url: jdbc:mysql://localhost:3306/amr?useUnicode=true&characterEncoding=UTF-8     # 数据库连接地址
@@ -53,6 +52,11 @@ spring:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
       mail.smtp.starttls.required: true
+  data:
+    mongodb:
+      host: 127.0.0.1
+      database: db_user
+      port: 27017
 
 #    initialSize: 5
 #    minIdle: 5
